--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         </section>
     </a>
 
-    <a href="https://drive.google.com/file/d/1S0mGBdbvGwdDmOEB2ZCroRCZrHj9lsfr/view?usp=drive_link">
+    <a href="https://drive.google.com/file/d/1S0mGBdbvGwdDmOEB2ZCroRCZrHj9lsfr/view?usp=sharing" target="_blank">
         <section>
             <img src="DocConnect.png" alt="DocConnect Image">
             <h2>DocConnect</h2>
